# googletest-for-cross-compilling

./: .gitignore  CMakeLists.txt  README.md
platfroms/: Android-aarch64.cmake  Android-armv7.cmake  Linux-aarch64.cmake  Linux-armv7.cmake  Linux-x86_64.cmake
